@@ -1,3 +1,8 @@
+2009-11-09  Michael Meyer <michael.meyer@intevation.de>
+
+	* cnvts/find_service/find_service.c:
+	Removed HAVE_SSL remains.
+
 2009-10-26  Michael Wiegand <michael.wiegand@intevation.de>
 
 	Post-release version bump.
